# test-repo-setup

./: pyproject.toml
.github/: dependabot.yml
src/: __main__.py
