[tool.poetry]
name = "test-repo-setup"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.8"


[tool.poetry.group.dev.dependencies]
mypy = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
greeting = "src.__main__:greeting"
